fixed mobile intro off center on iphone se

--- a/src/component/LandingPageV2/Introduction/style.css
+++ b/src/component/LandingPageV2/Introduction/style.css
@@ -70,7 +70,7 @@
   width: 149.39vh;
   height: 45.12vh;
   top: 11vh;
-
+  
   font-family: "Space Mono";
   font-style: normal;
   font-weight: 700;
@@ -180,7 +180,7 @@
 
 /* css to render appropriate intro on desktop vs. mobile by setting display size params
 */
-@media only screen and (max-device-width: 650px) {
+@media only screen and (max-device-width: 650px) and (min-device-width: 376px) {
   .desktop {
     display: none;
   }
@@ -263,3 +263,32 @@
   padding-top: 2%;
 }
 
+@media only screen and (max-device-width: 375px) {
+  .desktop {
+    display: none;
+  }
+  .comingsoontext {
+    display: inline;
+  }
+  .wearetextmobile {
+    margin-left: 6vh;
+  }
+  .generatetextmobile {
+    margin-left: 6vh;
+  }
+  .northeasternbest {
+    margin-left: 6vh;
+  }
+  .productdevelopment {
+    margin-left: 6vh;
+  }
+  .studio {
+    margin-left: 6vh;
+  }
+  .scrollmobile {
+    margin-left: 73vh;
+  }
+  .scrollmobile {
+    right: 50vh;
+  }
+}
